--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ billiard==3.3.0.23
 cached-property==1.3.0
 celery==3.1.23
 Django==1.10
+django-celery==3.1.17
+django-guardian==1.4.5
 docker-compose==1.8.0
 docker-py==1.9.0
 dockerpty==0.4.1
